test/expressions/noinit/generic-type-split.good
generic-type-split.chpl:2: error: cannot use noinit on the variable 'x' declared with generic type
