test/expressions/noinit/generic-type-split.chpl
var x: integral;
x = noinit;
